syntax = "proto3";

package sample.v1;

option go_package = "go/samplev1";

import "google/protobuf/descriptor.proto";

// Authentication ...
message Authentication {
  bool required = 1;
}

extend google.protobuf.MethodOptions {
  Authentication authentication = 50000;
}

// SampleAPI ...
service SampleAPI {
  // GetFoo ...
  rpc GetFoo(FooRequest) returns (FooResponse) {
    option (sample.v1.authentication).required = true;
  }
}

// FooRequest ...
message FooRequest {
  string foo = 1;
}

// FooResponse ...
message FooResponse {
  string bar = 1;
}

// Foo ...
message Foo {
  string hoge = 1;
}
